NEXUS-6689: Remote URL Validation